--- a/Project/Educate/registration.html
+++ b/Project/Educate/registration.html
@@ -66,11 +66,11 @@ label {
 
                                 <input type="text" name="age" id="AsID" class="form-control input-lg" placeholder="Age" tabindex="1" required><br/>
 
-                                <label>Gender</label><br>
+                                <label>Gender</label>
 
-                                                                                                                <input type="radio" name="gender" value="male"> Male <br>
+                                                                                                                <input type="radio" name="gender" value="male"> Male 
 
-                                                                                                                <input type="radio" name="gender" value="female"> Female <br>
+                                                                                                                <input type="radio" name="gender" value="female"> Female 
 
                                                                                                                 <input type="radio" name="gender" value="female"> Others</br></br>
 
@@ -82,8 +82,8 @@ label {
 
                                 <input type="confirm password" name="cpass" id="AsID" class="form-control input-lg" placeholder="Confirm Password" tabindex="1" required><br/>
 
-                                <label>User Type</label><br>
-<input type="radio" name="type" value="ind"> Individual <br>
+                                <label>User Type</label>
+<input type="radio" name="type" value="ind"> Individual 
 <input type="radio" name="type" value="org"> Organisation <br><br>
 <button type="submit" class="button button-block" name="loginuser" value="login_user" />Register</button><br>
 
